snake /w position, treat